# rs_diesel_derive_model

./: Cargo.toml  README.md
src/: lib.rs
